# EDK_GameEngine

./: .gitignore  Assets.cpp  CMakeLists.txt  ConsoleSystem.cpp  ConsoleSystem.h  EDK_Engine.sln  EventsStructs.h  ISystem.h  Matrices.cpp  Matrices.h  Mesh.h  MessageBus.cpp  README.md  RendererOGL.cpp  RendererOGL.h  Shader.cpp  Shader.h  Texture.cpp  Vectors.cpp  Vectors.h  VertexArray.h  demo.cpp  main.cpp  vcpkg.json
EDK_Engine/: EDK_Engine.vcxproj  EDK_Engine.vcxproj.filters  Res.rar
EDK_Engine/src/: Assets.h  ConsoleSystem.cpp  ConsoleSystem.h  Map.h  Mesh.cpp  MessageBus.cpp  MessageBus.h  RendererOGL.cpp  RendererOGL.h  Shader.cpp  Sprite.cpp  Sprite.h  Texture.cpp  main.cpp
